# sdl-widgets

./: .gitignore  CMakeLists.txt  Doxyfile  Doxyfile.in
resources/: CMakeLists.cmake
resources/images/ui/: metalPanel.h  test.h
src/: CMakeLists.3rd-party.cmake  CMakeLists.cmake  audioplayer.cpp  button.cpp  container.cpp  flat.cpp  flatbutton.cpp  flatdivider.cpp  flatinput.cpp  flatlabel.cpp  flatoption.cpp  flatpanel.cpp  flatselect.cpp  flatslider.cpp  flattext.cpp  flatvideo.cpp  fontbook.cpp  i18n.cpp  main.cpp  optiongroup.cpp  panel.cpp  state.cpp  widget.cpp  window.cpp  wsclient.cpp
src/demo/: main.cpp
src/include/: audioplayer.h  button.h  container.h  debug.h  flat.h  flatbutton.h  flatdivider.h  flatinput.h  flatlabel.h  flatoption.h  flatpanel.h  flatselect.h  flatslider.h  flattext.h  flatvideo.h  fontbook.h  i18n.h  optiongroup.h  panel.h  platform.h  state.h  widget.h  window.h  wsclient.h
tests/: CMakeLists.cmake  container.cpp
